fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -710,6 +710,11 @@ body {
 	#top-content .textbox .top {font-size: 15px;}
 	#top-content .textbox .bottom {font-size: 10px;}
 	
+	.bottombox3r .text .text-concat, .bottombox4l .text .text-concat {
+		max-height: 11.25em; /* (Number of lines you want visible) * (line-height) */
+		line-height: 1.2em;
+		text-align:left;
+	}
 	#member-div {max-width: 360px;margin: auto;}
 	#member-div #one-member .person .profile-photo {width: 100px;height: 100px;}
 	#member-div #one-member .person .name {text-align: center;align-self: center;line-height: 1.2;font-size: 1.2em;}
@@ -720,6 +725,12 @@ body {
 @media only screen and (max-width:320px) {
 	#top-content .textbox .top {font-size: 13px;}
 	#top-content .textbox .bottom {font-size: 10px;}
+
+	.bottombox3r .text .text-concat, .bottombox4l .text .text-concat {
+		max-height: 11.2em; /* (Number of lines you want visible) * (line-height) */
+		line-height: 1.2em;
+		text-align:left;
+	}
 	
 	#member-div {max-width: 360px;margin: auto;}
 	#member-div #one-member .person .profile-photo {width: 100px;height: 100px;}
